# ai-career-6months

./: .env.example  .gitignore  AI커리어전환_6개월로드맵.md  AI커리어전환_6개월로드맵_자동버전.md  CLAUDE.md  README.md  deploy_check.py  deploy_preflight_check_pro.py  pyproject.toml  render.yaml  setup.cfg
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0536e23fe446_add_sentiment_and_topic_columns.py
app/: analyze_feedback.py  database.py  evaluate_response.py  generate_weekly_report.py  init_db.py  main.py  scheduler_monitor.py  scheduler_report.py  scheduler_report_slack.py  vector_retrain.py
app/core/: config.py
app/feedback/: README.md  feedback_analyzer.py  feedback_trainer.py
app/models/: README.md  conversation_log.py  feedback_log.py
app/routers/: chat.py  conversation.py  feedback.py  ingest.py  insights.py  maintenance.py  personal_chat.py  rag_chat.py  report.py
app/services/: analyzer.py  conversation_logger.py  ingest_service.py  llm_service.py  personalizer.py  rag_service.py  vectorstore.py
app/utils/: README_logger.md  ai_metrics.py  backup_manager.py  db_cleanup.py  logger.py  monitor.py  report_generator.py  report_utils.py  slack_command_handler.py  slack_notifier.py  slack_uploader.py  vector_retrain.py
dashboards/: admin_dashboard.py  dashboard.py
docs/: 10주차_3.md  10주차_4_슬랙.md  11주차_2.md  13주차_1.md  14주차_1.md  5주차.md  6주차.md  7주차.md  7주차_2.md  7주차_4.md  8주차_10_DB 초기화.md  8주차_2.md  8주차_3.md  8주차_4.md  8주차_5.md  8주차_7.md  8주차_9.md  9주차_1.md  9주차_2.md  9주차_4_자동화.mc  9주차_5.md  SQLAlchemy 테이블 스키마 변경 완벽 가이드.md  SQLAlchemy 플래시 카드 생성.md  api_reference.md  portfolio_guide.md  project_retrospective.md  sample.txt  system_flow.mmd
docs/task_schedule/: 10주차_1.md  10주차_2_오래된 로그 백업.md  11주차_1.md  12주차_1.md  12주차_2.md  15주차_1.md  15주차_2.md  16주차_1.md  8주차_1.md  8주차_6.md  8주차_8.md  9주차_3_Slack 자동 전송.md
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Navigation.jsx
frontend/src/pages/: ChatPage.jsx  Dashboard.jsx  SentimentTrend.jsx
scripts/: backup_db.py  create_tables.py  feedback_loop.py  ingest_docs.py  retrain_vectorstore.py  test_backup_db.py  test_feedback_analyzer.py  test_feedback_insert.py  test_feedback_trainer.py  test_logger.py
