[project]
name = "ai-career-6months"
version = "0.1.0"
description = "AI Career Transition 6-Month Project — FastAPI + LangChain + Chroma 기반 AI 백엔드 서비스"
authors = [
  { name = "LEE YOUNGHYUN" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  # --- Backend Framework ---
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # --- AI / LLM Core ---
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.1.0",
  "chromadb>=0.5.0",
  "openai>=1.40.0",

  # --- Database / ORM ---
  "mysqlclient>=2.2.0",
  "sqlalchemy>=2.0.30",

  # --- Config / Utils ---
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "tqdm>=4.66.0",

  # --- Optional Tools ---
  "jinja2>=3.1.3",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "langchain-community (>=0.3.31,<0.4.0)"
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "flake8",
  "pytest",
  "pytest-asyncio"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true

[tool.black]
line-length = 88
target-version = ['py313']

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
